--- a/Modul_8/Praktik/app/src/main/res/values/strings.xml
+++ b/Modul_8/Praktik/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Praktik</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tab_text_1">TAB 1</string>
+    <string name="tab_text_2">TAB 2</string>
 </resources>
